<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings" >

    <PreferenceCategory android:title="@string/general_preferences" >
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/story_text_size_array"
            android:entryValues="@array/story_text_size_array_values"
            android:key="@string/story_text_size"
            android:title="@string/story_text_size" />
        <ListPreference
            android:enabled="false"
            android:key="setting_map_zoom_level"
            android:title="@string/map_zoom_level" />
        <ListPreference
            android:enabled="false"
            android:title="@string/timezone" />

        <Preference
            android:key="@string/logout"
            android:title="@string/logout" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_preferences" >
        <PreferenceScreen android:title="@string/about_nooz" >
            <Preference
                android:summary="@string/version"
                android:title="@string/build_version" />
            <Preference
                android:key="@string/open_source_licenses"
                android:summary="License details for open source software"
                android:title="@string/open_source_licenses" />
            <Preference
                android:key="@string/privacy_policy"
                android:title="@string/privacy_policy" />
            <Preference
                android:key="@string/terms_of_use"
                android:title="@string/terms_of_use" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>